Fix @extend, dark mode conflicts

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -168,13 +168,13 @@
     background-color: $button-raised-background;
     text-align: center;
     letter-spacing: .5px;
-    @extend .z-depth-1;
+    box-shadow: $z-depth-1-shadow;
     transition: background-color .2s ease-out;
     cursor: pointer;
 
     &:hover {
         background-color: $button-raised-background-hover;
-        @extend .z-depth-1-half;
+        box-shadow: $z-depth-1-half-shadow;
     }
 
     &.primary {
@@ -243,14 +243,14 @@
     padding: 0;
     background-color: $button-floating-background;
     border-radius: $button-floating-radius;
-    @extend .z-depth-1;
+    box-shadow: $z-depth-1-shadow;
     transition: background-color .3s;
     cursor: pointer;
     vertical-align: middle;
 
     &:hover {
         background-color: $button-floating-background-hover;
-        @extend .z-depth-1-half;
+        box-shadow: $z-depth-1-half-shadow;
     }
 
     &:before {
