--- a/sass/components/_collapsible.scss
+++ b/sass/components/_collapsible.scss
@@ -3,7 +3,7 @@
     border-right: 1px solid $collapsible-border-color;
     border-left: 1px solid $collapsible-border-color;
     margin: $element-top-margin 0 $element-bottom-margin 0;
-    @extend .z-depth-1;
+    box-shadow: $z-depth-1-shadow;
 
     &:not(.popout) {
         border-radius: 10px;
